--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="364180591599-6a5mepnjp2e5kasa56c6ra53jobb977q.apps.googleusercontent.com">
+    <meta name="google-signin-client_id"
+        content="364180591599-6a5mepnjp2e5kasa56c6ra53jobb977q.apps.googleusercontent.com">
     <title>Department of Computer Application</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
@@ -58,7 +59,8 @@
         </section>
         <div class="infobullet">
             <div class="info_type">
-                <a  href="Exam Schedule for UG Hons. Odd Sem. (Dec-2024) exam.pdf" class="info_type">
+                <a href="https://drive.google.com/file/d/1xkr0BdeQcHsQ_XC_Yk76eSskFwrtHBHt/view?usp=sharing"
+                    class="info_type">
                     <img src="styles/icons/notifi_bl.svg" alt="" class="img_light">
                     <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
                     <p>EXAM SHEDULE OUT</p>
@@ -119,9 +121,9 @@
         <div class="footer-bottom">
             <p>&copy; 2023 Department of Computer Application. All rights reserved.</p>
             <div class="footer-section"></div>
-                <a  class= "pp" href="Privacy Policy-GCODEDCA.HTML">Privacy Policy</a> | 
-                <a class = "pp " href="t&c.html">Terms and Conditions</a>
-            </div>
+            <a class="pp" href="Privacy Policy-GCODEDCA.HTML">Privacy Policy</a> |
+            <a class="pp " href="t&c.html">Terms and Conditions</a>
+        </div>
         </div>
     </footer>
 
