Updates over site

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </section>
         <div class="infobullet">
             <div class="info_type">
-                <a href="https://drive.google.com/file/d/1xkr0BdeQcHsQ_XC_Yk76eSskFwrtHBHt/view?usp=sharing"
+                <a href="#"
                     class="info_type">
                     <img src="styles/icons/notifi_bl.svg" alt="" class="img_light">
                     <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
-                    <p>EXAM SHEDULE OUT</p>
+                    <p>No New Notifications</p>
                 </a>
             </div>
         </div>
