updates for new session

--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -158,8 +158,11 @@
                     <a href="years/sem1.html">
                         <button class="semester-button active">Semester 1</button>
                     </a>
+                    <a href="years/sem2.html">
+                        <button class="semester-button active">Semester 2</button>
+                    </a>
 
-                    <button class="semester-button disabled">Semester 2</button>
+             
                 </div>
 
             </div>
@@ -169,8 +172,10 @@
                     <a href="years/sem3.html">
                         <button class="semester-button active">Semester 3</button>
                     </a>
-
-                    <button class="semester-button disabled">Semester 4</button>
+                    <a href="years/sem4.html">
+                        <button class="semester-button active">Semester 4</button>
+                    </a>
+                    
                 </div>
             </div>
             <div class="resource-box">
