--- a/years/sem2.html
+++ b/years/sem2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BHCS Sem-1</title>
+    <title>BHCS Sem-2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -16,9 +16,9 @@
 
 <body>
     <div class="head">
-        <h1>Year 1 Sem-1 PYQS</h1>
+        <h1>Year 2 Sem-2 PYQS</h1>
     </div>
-    <div class="timeline">
+    <!-- <div class="timeline">
         <div class="event">
             <div class="subject">C / C++</div>
             <div class="date">20 Jan</div>
@@ -39,53 +39,53 @@
             <div class="subject">Environmental </div>
             <div class="date">3 Feb</div>
         </div>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="col-sm-6 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Programming Concepts Using C/C++</h5>
+                        <h5 class="card-title">Data Structures Using C &C++</h5>
                         <p class="card-text">Learn the fundamentals of programming using C and C++ with a focus on
                             structured programming, pointers, and basic algorithms.</p>
 
-                        <a href="https://drive.google.com/file/d/1LBlyrGiWqpaWh8wPJQIA3UvSBEnCGE5B/view?usp=drive_link#"
+                        <a href="https://drive.google.com/file/d/189SskKQKKrU7B0Gm8aiYlWY-EOcRdtVA/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
 
-                        <a href="https://ia803407.us.archive.org/35/items/the-ansi-c-programming-language-by-brian-w.-kernighan-dennis-m.-ritchie.org/The%20ANSI%20C%20Programming%20Language%20by%20Brian%20W.%20Kernighan,%20Dennis%20M.%20Ritchie.pdf"
+                        <!-- <a href="https://ia803407.us.archive.org/35/items/the-ansi-c-programming-language-by-brian-w.-kernighan-dennis-m.-ritchie.org/The%20ANSI%20C%20Programming%20Language%20by%20Brian%20W.%20Kernighan,%20Dennis%20M.%20Ritchie.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
-                            Download Book PDF</a>
+                            Download Book PDF</a> -->
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Introduction To Web and HTML</h5>
+                        <h5 class="card-title">Mathematics II (Numerical Methods)</h5>
                         <p class="card-text">Understand the basics of web development, including HTML, CSS, and
                             responsive design principles.</p>
-                        <a href="https://drive.google.com/file/d/1KedHEQSfBTGfjDbvh0EsXPAYn7GnmLEH/view?usp=drive_link#"
+                        <a href="https://drive.google.com/file/d/1aADTHdXBj7n_8HxkpZnxPKOEXb3iai8X/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
 
-                        <a href="https://www.doc-developpement-durable.org/file/Projets-informatiques/cours-&-manuels-informatiques/htm-html-xml-ccs/Sams%20Teach%20Yourself%20HTML,%20CSS,%20and%20JavaScript%20All%20in%20One.pdf"
+                        <!-- <a href="https://www.doc-developpement-durable.org/file/Projets-informatiques/cours-&-manuels-informatiques/htm-html-xml-ccs/Sams%20Teach%20Yourself%20HTML,%20CSS,%20and%20JavaScript%20All%20in%20One.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
-                            Download Book PDF</a>
+                            Download Book PDF</a> -->
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Digital Electronics</h5>
+                        <h5 class="card-title">Professional Communication</h5>
                         <p class="card-text">Explore the concepts of logic gates, combinational and sequential circuits,
                             and number systems in digital electronics.</p>
-                        <a href="https://drive.google.com/file/d/1uXVNOaKvE0MP2-zM2kjIJtZ6_X8fR6T_/view?usp=drive_link#"
+                        <a href="https://drive.google.com/file/d/1p5AS3DfxJx823ip5-nehIJbdxt5SfykG/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
@@ -100,10 +100,10 @@
             <div class="col-sm-6 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Mathematics-I</h5>
+                        <h5 class="card-title">Computer Architecture and Organization</h5>
                         <p class="card-text">Cover the foundational topics of calculus, linear algebra, and differential
                             equations essential for computing.</p>
-                        <a href="https://drive.google.com/file/d/1iT9OTRSTZd5jsVB-JIhUqGxzZXbEpvni/view?usp=drive_link#"
+                        <a href="https://drive.google.com/file/d/1My6esmqu5IDBvQdOpObpzKMMco3BaOuW/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
@@ -113,17 +113,17 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Environmental Studies</h5>
+                        <h5 class="card-title">Human Values & Professional Ethicss</h5>
                         <p class="card-text">Learn about environmental challenges, sustainability, and the role of
                             technology in preserving natural resources.</p>
-                        <a href="https://drive.google.com/file/d/1FxovIsEmT8LkQnYILJSbfPcPbBWQWmob/view?usp=drive_link#"
+                        <a href="https://drive.google.com/file/d/1K5JRWDk5fs77f1CJO5fGD0CxaYauMDGY/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <div class="card" style="text-align: center; padding: 40px;">
                     <div class="card-body">
                         <h5 class="card-title" style="font-size: 1.8rem; font-weight: bold; margin-bottom: 20px;"><img
@@ -139,7 +139,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
