--- a/years/sem3.html
+++ b/years/sem3.html
@@ -295,7 +295,7 @@
     <div class="head">
         <h1>Year 2 Sem-3 PYQS</h1>
     </div>
-    <div class="timeline">
+    <!-- <div class="timeline">
         <div class="event">
             <div class="subject">R Programming</div>
             <div class="date">21 Jan 2025</div>
@@ -312,7 +312,7 @@
             <div class="subject">Operating System</div>
             <div class="date">31 Jan 2025</div>
         </div>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="col-sm-6 mb-3">
