--- a/video_resources.html
+++ b/video_resources.html
@@ -266,6 +266,41 @@ body.dark .footer-bottom {
                         However, this playlist can help you comfortably cover the entire syllabus..</p>
                 </a>
             </div>
+            <div class="video-row">
+                <a href="https://youtube.com/playlist?list=PLlhM4lkb2sEhfuXL-2BDrJ67WkUdQ2v9b&si=WEgZgrvgHYwvpdSW" target="_blank" class="video-box" data-year="year2" data-semester="sem4">
+                    <h3>Java Programming</h3>
+                    <p>This video thoroughly covers all the core components of the Java Language, providing a
+                        comprehensive overview of the essential topics.</p>
+                </a>
+
+                <!-- Video 2 -->
+                <a href="https://youtube.com/playlist?list=PLqleLpAMfxGCUpDRFUnLKeDrgBsPOwTQK&si=6CxQ9SEazwBL99uJ" target="_blank"
+                    class="video-box"data-year="year2" data-semester="sem4">
+                    <h3>Computer Networks</h3>
+                    <p>This playlist provides in-depth knowledge of
+                        Computer Networks. Be sure to cover all the topics listed
+                        in the core syllabus, as reflected in the video titles.
+                        Additionally, focus on gaining practical experience,
+                        as applying theory in practice is crucial for mastering
+                        Networking.</p>
+                </a>
+
+                <!-- Video 3 -->
+                <a href="https://youtube.com/playlist?list=PLxCzCOWd7aiEKtKSIHYusizkESC42diyc&si=tpLEOs09ppC5je-T" target="_blank"
+                    class="video-box" data-year="year2" data-semester="sem4">
+                    <h3>Compiler Design</h3>
+                    <p>
+                       Compiler Design </p>
+                </a>
+
+                <!-- Video 4 -->
+                <a href="https://youtube.com/playlist?list=PLDN4rrl48XKpZkf03iYFl-O29szjTrs_O&si=uzQbDHdpQZCRThUC" target="_blank"
+                    class="video-box" data-year="year2" data-semester="sem4">
+                    <h3>DAA Design And Analysis of Algorithms</h3>
+                    <p>Try exploring the topics in this specific playlist, as not all topics are available in one place.
+                        However, this playlist can help you comfortably cover the entire syllabus..</p>
+                </a>
+            </div>
         </div>
     </main>
 
